dark mode fix

--- a/packages/admin-ui/src/pages/packages/components/packages.scss
+++ b/packages/admin-ui/src/pages/packages/components/packages.scss
@@ -171,3 +171,13 @@
     font-size: 1.5rem;
   }
 }
+
+#dark {
+  #main {
+    .pkgs-back-btn {
+      span {
+        color: var(--dappnode-links-color);
+      }
+    }
+  }
+}
